# crewlyze

./: .gitignore  .npmignore  ARCHITECTURE.md  CHANGELOG.md  LICENSE  README-NPM.md  README.md  TODO.md  USAGE.md  WORKFLOW.md  app.py  blog.txt  crew.py  docker-compose.yml  git_history.txt  index.html  install_deps.bat  lf_converter.py  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run.bat  run_web.bat  search.py
.github/: FUNDING.yml
.github/workflows/: npm-publish.yml
.local/share/workspace/: .crewai_user.json  latest_kickoff_task_outputs.db
.pip_cache/: crewai-0.11.2-py3-none-any.whl
agents/: cleaner.py  code_gen.py  insights.py  predictive.py  relation.py  validator.py  visualizer.py
config/: README.md  context.py  llm_config.py  metrics_tracker.py
data/: car_parts_dataset_500.csv  cleaned_csv.csv  input.csv  sugar.csv
data/sessions/0234bcabd96d/: metadata.json
data/sessions/0a66311e308d/: cleaned.csv  metadata.json  original.csv  results.json
data/sessions/0f67421470c6/: cleaned.csv  metadata.json
data/sessions/14b48eadf665/: cleaned.csv  metadata.json  results.json
data/sessions/57773f7e00eb/: metadata.json  results.json
data/sessions/a402006b7ddd/: metadata.json  results.json
data/sessions/b3e6bf41f956/: cleaned.csv  metadata.json  original.csv
data/sessions/c71065e6ffab/: cleaned.csv  (+2 more)
outputs/: op.py
tools/: dataframe_ops.py  dataset_tools.py
tools/ui/: copilot.py
ui/: __init__.py  components.py  copilot.py  export.py  styles.py
web/: app.js  index.html  style.css
workflows/: pipeline.py
(+4 files in other folders)
